--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "react": "^18.2.0",
@@ -27,6 +28,8 @@
     "@babel/preset-react": "^7.18.6",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
+    "chalk": "^4.1.2",
+    "dotenv-webpack": "^8.0.0",
     "nodemon": "^2.0.19",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
